[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ketter"
version = "1.0.0"
authors = [
  {name = "Kelsey Mwongeli", email = "kelseykm.git@gmail.com"},
]
dependencies = [
  "aiofiles",
  "aiohttp",
  "tqdm",
]

[tool.setuptools]
packages = ["ketter"]

[project.scripts]
ketter = "ketter.__main__:cli"
