[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ketter"
version = "1.0.0"
description = "Asynchronous HTTP downloader"
readme = "README.md"
authors = [
  {name = "Kelsey Mwongeli", email = "kelseykm.git@gmail.com"},
]
dependencies = [
  "aiofiles",
  "aiohttp",
  "tqdm",
]

[project.scripts]
ketter = "ketter.__main__:cli"
